# iroha

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.ac  configure.gyp  iroha_files.py
docs/: example.iroha  glossary.md  iroha.md  misc.md  resource_class.md  structure.md
examples/: array.cpp  array.py  axi_slave.py  axi_to_mem.py  channel.cpp  channel.py  channel_pipeline.py  compound_state.py  config-examples.py  copy.cpp  dataflow.py  dataflow_chain.py  dataflow_wait.py  embed.cpp  embed.py  example_common.cpp  example_common.h  ext_combinational.py  ext_flow_call.py  ext_io.cpp  ext_io.py  ext_mem.py  ext_task.py  ext_task_call.py  fifo.py  global_reg.py  loop.cpp  loop.py  mailbox_pipeline.py  minimum.cpp  minimum.py  mod_comb.v  mod_flow.v  mod_hello.v  mod_task.v  module_import.py  native.py  pipeline.py  pipeline_fj.py  port_io.py  (+14 more)
lib/: cxx-rt.h  gen_instantiation.py  generic-platform.iroha
py/: example-main.py  iroha.py
py/iroha/: __init__.py  axi.py  design_tool.py  iroha.py
py/iroha/native/: Build.mk  native.cpp
src/: iroha.gyp  main.cpp
src/builder/: design_builder.cpp  design_builder.h  exp_builder.cpp  exp_builder.h  fsm_builder.cpp  fsm_builder.h  platform_builder.cpp  platform_builder.h  reader.cpp  reader.h  tree_builder.cpp  tree_builder.h
src/design/: design_tool.cpp  design_tool.h  design_util.cpp  design_util.h  importer.cpp  importer.h  module_copier.cpp  module_copier.h  object_pool.h  resource_attr.cpp  resource_attr.h  resource_class.cpp  resource_class.h  resource_copier.cpp  resource_copier.h  table_copier.cpp  table_copier.h  util.cpp  util.h  validator.cpp  validator.h
src/iroha/: common.cpp  common.h  design_tool_api.h  dot.cpp  dot.h  i_design.cpp  i_design.h  i_platform.cpp  i_platform.h  insn_operands.h  iroha.cpp  iroha.h  iroha_main.cpp  iroha_main.h  logging.cpp  logging.h  module_import.cpp  module_import.h  numeric.h  object_pool.h  opt_api.h  resource_attr.cpp  resource_attr.h  resource_class.cpp  resource_class.h  resource_params.cpp  resource_params.h  stl_util.h  test_util.h  util.cpp  util.h  writer_api.h
src/iroha/base/: file.cpp  file.h  util.cpp  util.h
src/iroha/dot/: dot.cpp  dot.h
src/numeric/: numeric.cpp  numeric.h  numeric_literal.cpp  numeric_literal.h  numeric_manager.cpp  numeric_manager.h  numeric_op.cpp  numeric_op.h  numeric_test.cpp  numeric_type.cpp  numeric_type.h  numeric_value.cpp  numeric_value.h  numeric_width.cpp  numeric_width.h  wide_op.cpp  wide_op.h
src/opt/: array_elimination.cpp  array_elimination.h  array_split_rdata.cpp  array_split_rdata.h  array_to_mem.cpp  array_to_mem.h  bb_collector.cpp  bb_collector.h  bb_set.cpp  bb_set.h  bb_shrink.cpp  bb_shrink.h  common.h  compound.cpp  compound.h  data_flow.cpp  data_flow.h  data_flow_collector.cpp  data_flow_collector.h  debug_annotation.cpp  debug_annotation.h  delay_info.cpp  delay_info.h  dominator_tree.cpp  dominator_tree.h  dominator_tree_builder.cpp  dominator_tree_builder.h  latency_info.cpp  latency_info.h  opt_util.cpp  opt_util.h  optimizer.cpp  optimizer.h  optimizer_log.cpp  optimizer_log.h  pass.cpp  pass.h  phase.cpp  phase.h  simple_bb_merge.cpp  (+5 more)
src/opt/branch_elimination/: branch_elimination_pass.cpp  branch_elimination_pass.h
src/opt/clean/: clean.cpp  clean.h  empty_state.cpp  empty_state.h  empty_table.cpp  empty_table.h  pseudo_resource.cpp  pseudo_resource.h  unreachable_state.cpp  unreachable_state.h  unused_register.cpp  unused_register.h  unused_resource.cpp  unused_resource.h
src/opt/constant/: constant_propagation.cpp  constant_propagation.h
src/opt/loop/: loop_block.cpp  loop_block.h
src/opt/pipeline/: insn_condition.cpp  insn_condition.h  pipeline_pass.cpp  pipeline_pass.h  pipeline_phase.cpp  pipeline_phase.h  pipeliner.cpp  pipeliner.h  reg_info.cpp  reg_info.h  scheduled_shape.cpp  scheduled_shape.h  shape.cpp  shape.h  stage_scheduler.cpp  stage_scheduler.h
src/opt/profile/: profile.cpp  profile.h
src/opt/sched/: bb_data_path.cpp  bb_data_path.h  bb_scheduler.cpp  bb_scheduler.h  bb_wire_plan.cpp  bb_wire_plan.h  common.h  data_path.cpp  data_path.h  data_path_set.cpp  data_path_set.h  explorer.cpp  explorer.h  path_node.cpp  path_node.h  plan_evaluator.cpp  plan_evaluator.h  relocator.cpp  relocator.h  resource_conflict_tracker.cpp  resource_conflict_tracker.h  resource_entry.cpp  resource_entry.h  resource_replica_assigner.cpp  resource_replica_assigner.h  resource_tracker.cpp  resource_tracker.h  sched.cpp  sched.h  sched_block.cpp  sched_block.h  sched_pass.cpp  sched_pass.h  sched_phase.cpp  sched_phase.h  scheduler.cpp  scheduler.h  table_scheduler.cpp  table_scheduler.h  transition_fixup.cpp  (+11 more)
src/opt/ssa/: condition_value_range.cpp  condition_value_range.h  phi_builder.cpp  phi_builder.h  phi_cleaner.cpp  phi_cleaner.h  phi_injector.cpp  phi_injector.h  ssa.cpp  ssa.h  ssa_converter.cpp  ssa_converter.h
src/opt/unroll/: loop_block.cpp  loop_block.h  state_copier.cpp  state_copier.h  unroll_pass.cpp  unroll_pass.h  unroll_phase.cpp  unroll_phase.h  unroller.cpp  unroller.h
src/opt/wire/: alloc_resource.cpp  alloc_resource.h  bb_wire_plan.cpp  bb_wire_plan.h  common.h  data_path.cpp  data_path.h  explorer.cpp  explorer.h  path_node.cpp  path_node.h  plan_evaluator.cpp  plan_evaluator.h  relocator.cpp  relocator.h  resource_conflict_tracker.cpp  resource_conflict_tracker.h  resource_entry.cpp  resource_entry.h  resource_replica_assigner.cpp  resource_replica_assigner.h  resource_share.cpp  resource_share.h  resource_tracker.cpp  resource_tracker.h  scaffold.cpp  scaffold.h  scheduler.cpp  scheduler.h  simple_shrink.cpp  simple_shrink.h  virtual_resource.cpp  (+9 more)
src/platform/: platform.cpp  platform.h  platform_db.cpp  platform_db.h
src/writer/: connection.cpp  connection.h  dot_writer.cpp  dot_writer.h  exp_writer.cpp  exp_writer.h  html_writer.cpp  html_writer.h  module_template.cpp  module_template.h  names.cpp  names.h  writer.cpp  writer.h
tests/: loop.iroha  min.iroha
(+148 files in other folders)
